# Monument-AI

./: .env  .env.example  .flake8  .gitignore  App.tsx  README.md  app.json  mypy.ini  package.json  pyproject.toml
api/: run.py
api/common/exceptions/: __init__.py  base.py  exceptions.py
api/common/handlers/: exceptions.py
api/common/models/: __init__.py  created_mixin.py  created_updated_mixin.py
api/common/orm/: __init__.py  annotations.py  entities.py  filters.py  mixins.py
api/config/: __init__.py  app.py  initializers.py  routers.py  settings.py
api/src/: __init__.py  getText.py  photo_scaning.py
app/: _layout.tsx  home.tsx  index.tsx  info.tsx
components/: constants.ts
src/utils/: getText.py
