[tool.poetry]
name = "monument ai"
version = "0.1.0"
description = ""
authors = ["Zaskilovan <diulgervanya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
mypy = "^1.9.0"
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
python-multipart = "^0.0.9"
pybase64 = "^1.3.2"
ultralytics = "^8.1.45"
supervision = "^0.19.0"
numpy = "^1.26.4"
uuid = "^1.30"
pygoogle-image = "^1.0.0"
simple-image-download = "^0.5"
bing-image-downloader = "^1.1.2"



[tool.aerich]
tortoise_orm = "config.database_config"
location = "../migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

